Fixed menu wider then screen on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,7 @@ body {
 /*opmaak wrapper navigatie balk*/
 .wrapper {
   background-color: var(--primary);
+  box-sizing: border-box;
   overflow: hidden;
   width: 100%;
   position: sticky;
